Handling export error
Handling export errors and warning about the possibility that theWord
is using the file.

--- a/languages/iBiblia.po
+++ b/languages/iBiblia.po
@@ -234,6 +234,12 @@ msgstr ""
 msgid "Exodus"
 msgstr ""
 
+#: projeto.sexporttofileerror
+msgid ""
+"iBiblia found and error while exporting the module file.\n"
+"Please check if theWord is using the file, then close it and try again.\n"
+msgstr ""
+
 #: projeto.sezekiel
 msgid "Ezekiel"
 msgstr ""
