--- a/languages/iBiblia.pt.po
+++ b/languages/iBiblia.pt.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: pt\n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #: formexportar.sanalyticalconcordance
 msgid "AnalyticalConcordance"
@@ -87,6 +87,15 @@ msgstr "referência 1"
 #: formprincipal.sreference2
 msgid "reference 2"
 msgstr "referência 2"
+
+#: formprincipal.srollbackchanges
+msgctxt "formprincipal.srollbackchanges"
+msgid "Rollback changes"
+msgstr "Reverter para alterações salvas"
+
+#: formprincipal.srollbackchangesconfirmation
+msgid "Are you sure you want to rollback all changes to this verse?"
+msgstr "Deseja descartar todas as alterações feitas a este versículo?"
 
 #: formprincipal.ssavechanges
 msgid "Would you like to save your changes?"
@@ -808,6 +817,7 @@ msgid "Rollback"
 msgstr "Reverter"
 
 #: tfrmprincipal.actionreverterassociacoes.hint
+msgctxt "tfrmprincipal.actionreverterassociacoes.hint"
 msgid "Rollback changes"
 msgstr "Reverter para alterações salvas"
 
