--- a/languages/iBiblia.en.po
+++ b/languages/iBiblia.en.po
@@ -122,16 +122,28 @@ msgid "Not associated"
 msgstr "Not associated"
 
 #: formpropprojeto.schangetextconfirmation
-msgid "Are you sure you want to load this new text?"
-msgstr "Are you sure you want to load this new text?"
+#| msgid "Are you sure you want to load this new text?"
+msgid "Are you sure you want to replace this text with a new one?"
+msgstr "Are you sure you want to replace this text with a new one?"
+
+#: formpropprojeto.schangetextconfirmationassociation
+msgid ""
+"Loading a new text will cause all your existing associations to be discarded. But, if you click 'Yes', iBiblia can try to keep existing associations for you.\n"
+"\n"
+"Would you like iBiblia to do that?\n"
+msgstr ""
+"Loading a new text will cause all your existing associations to be discarded. But, if you click 'Yes', iBiblia can try to keep existing associations for you.\n"
+"\n"
+"Would you like iBiblia to do that?\n"
 
 #: formpropprojeto.schooseabiblemodule
 msgid "Please choose a theWord module file..."
 msgstr "Please choose a theWord module file..."
 
 #: formpropprojeto.schooseanothertext
-msgid "Change text"
-msgstr "Change text"
+#| msgid "Change text"
+msgid "Replace text"
+msgstr "Replace text"
 
 #: formpropprojeto.schoosedictionary
 msgctxt "formpropprojeto.schoosedictionary"
@@ -146,6 +158,14 @@ msgstr "Clear text"
 #: formpropprojeto.scleartextconfirmation
 msgid "Are you sure you want to clear this text?"
 msgstr "Are you sure you want to clear this text?"
+
+#: formpropprojeto.scleartextconfirmationassociation
+msgid ""
+"Are you sure you want to clear this text?\n"
+"All your associations will be lost!\n"
+msgstr ""
+"Are you sure you want to clear this text?\n"
+"All your associations will be lost!\n"
 
 #: formpropprojeto.sdestinationtab
 msgctxt "formpropprojeto.sdestinationtab"
@@ -268,8 +288,21 @@ msgid "Colossians"
 msgstr "Colossians"
 
 #: projeto.scorrupteddata
-msgid "Corrupted data, some associations may be lost."
-msgstr "Corrupted data, some associations may be lost."
+#| msgid ""
+#| "Corrupted data, some associations may be lost.This can happen for several reasons:\n"
+#| " 1. The project file was modified outside iBiblia\n"
+#| " 2. The project was created/edited on a differente iBiblia version\n"
+#| " 3. This can be a bug in iBiblia. In this case, please file a bug in Github project page.\n"
+msgid ""
+"Corrupted data, some associations may be lost.This can happen for several reasons:\n"
+" 1. The project file was modified outside iBiblia\n"
+" 2. The project was created/edited on an incompatible iBiblia version\n"
+" 3. This can be a bug in iBiblia. In this case, please file a bug in Github project page.\n"
+msgstr ""
+"Corrupted data, some associations may be lost.This can happen for several reasons:\n"
+" 1. The project file was modified outside iBiblia\n"
+" 2. The project was created/edited on an incompatible iBiblia version\n"
+" 3. This can be a bug in iBiblia. In this case, please file a bug in Github project page.\n"
 
 #: projeto.sdaniel
 msgid "Daniel"
@@ -749,11 +782,11 @@ msgstr "Strong's concordance"
 
 #: tfrmmesclarprojetos.button1.caption
 msgid "Button1"
-msgstr ""
+msgstr "Button1"
 
 #: tfrmmesclarprojetos.caption
 msgid "Mesclar projetos"
-msgstr ""
+msgstr "Mesclar projetos"
 
 #: tfrmprincipal.actionabrirprojeto.caption
 msgid "Open..."
@@ -833,10 +866,12 @@ msgid "Rollback changes"
 msgstr "Rollback changes"
 
 #: tfrmprincipal.actionsair.caption
+msgctxt "tfrmprincipal.actionsair.caption"
 msgid "Exit"
 msgstr "Exit"
 
 #: tfrmprincipal.actionsair.hint
+msgctxt "tfrmprincipal.actionsair.hint"
 msgid "Exit the program"
 msgstr "Exit the program"
 
@@ -996,3 +1031,13 @@ msgstr "Save module as..."
 #: tfrmprincipal.toolbar1.caption
 msgid "ToolBar1"
 msgstr "ToolBar1"
+
+#: tfrmprincipal.toolbuttonexit.caption
+msgctxt "tfrmprincipal.toolbuttonexit.caption"
+msgid "Exit"
+msgstr "Exit"
+
+#: tfrmprincipal.toolbuttonexit.hint
+msgctxt "tfrmprincipal.toolbuttonexit.hint"
+msgid "Exit the program"
+msgstr "Exit the program"
