--- a/languages/iBiblia.po
+++ b/languages/iBiblia.po
@@ -110,7 +110,14 @@ msgid "Not associated"
 msgstr ""
 
 #: formpropprojeto.schangetextconfirmation
-msgid "Are you sure you want to load this new text?"
+msgid "Are you sure you want to replace this text with a new one?"
+msgstr ""
+
+#: formpropprojeto.schangetextconfirmationassociation
+msgid ""
+"Loading a new text will cause all your existing associations to be discarded. But, if you click 'Yes', iBiblia can try to keep existing associations for you.\n"
+"\n"
+"Would you like iBiblia to do that?\n"
 msgstr ""
 
 #: formpropprojeto.schooseabiblemodule
@@ -118,7 +125,7 @@ msgid "Please choose a theWord module file..."
 msgstr ""
 
 #: formpropprojeto.schooseanothertext
-msgid "Change text"
+msgid "Replace text"
 msgstr ""
 
 #: formpropprojeto.schoosedictionary
@@ -133,6 +140,12 @@ msgstr ""
 
 #: formpropprojeto.scleartextconfirmation
 msgid "Are you sure you want to clear this text?"
+msgstr ""
+
+#: formpropprojeto.scleartextconfirmationassociation
+msgid ""
+"Are you sure you want to clear this text?\n"
+"All your associations will be lost!\n"
 msgstr ""
 
 #: formpropprojeto.sdestinationtab
@@ -256,7 +269,11 @@ msgid "Colossians"
 msgstr ""
 
 #: projeto.scorrupteddata
-msgid "Corrupted data, some associations may be lost."
+msgid ""
+"Corrupted data, some associations may be lost.This can happen for several reasons:\n"
+" 1. The project file was modified outside iBiblia\n"
+" 2. The project was created/edited on an incompatible iBiblia version\n"
+" 3. This can be a bug in iBiblia. In this case, please file a bug in Github project page.\n"
 msgstr ""
 
 #: projeto.sdaniel
@@ -819,10 +836,12 @@ msgid "Rollback changes"
 msgstr ""
 
 #: tfrmprincipal.actionsair.caption
+msgctxt "tfrmprincipal.actionsair.caption"
 msgid "Exit"
 msgstr ""
 
 #: tfrmprincipal.actionsair.hint
+msgctxt "tfrmprincipal.actionsair.hint"
 msgid "Exit the program"
 msgstr ""
 
@@ -980,5 +999,15 @@ msgstr ""
 
 #: tfrmprincipal.toolbar1.caption
 msgid "ToolBar1"
+msgstr ""
+
+#: tfrmprincipal.toolbuttonexit.caption
+msgctxt "tfrmprincipal.toolbuttonexit.caption"
+msgid "Exit"
+msgstr ""
+
+#: tfrmprincipal.toolbuttonexit.hint
+msgctxt "tfrmprincipal.toolbuttonexit.hint"
+msgid "Exit the program"
 msgstr ""
 
