--- a/languages/iBiblia.pt.po
+++ b/languages/iBiblia.pt.po
@@ -122,15 +122,25 @@ msgid "Not associated"
 msgstr "Não associado"
 
 #: formpropprojeto.schangetextconfirmation
-msgid "Are you sure you want to load this new text?"
+msgid "Are you sure you want to replace this text with a new one?"
 msgstr "Tem certeza de que quer substituir o texto atual por outro?"
+
+#: formpropprojeto.schangetextconfirmationassociation
+msgid ""
+"Loading a new text will cause all your existing associations to be discarded. But, if you click 'Yes', iBiblia can try to keep existing associations for you.\n"
+"\n"
+"Would you like iBiblia to do that?\n"
+msgstr ""
+"Carregar um novo texto fará com que as associações existentes sejam descartadas. Mas, se você clicar no botão \"Sim\", o iBiblia pode tentar manter as suas associações.\n"
+"\n"
+"Você gostaria que o iBiblia fizesse isso?\n"
 
 #: formpropprojeto.schooseabiblemodule
 msgid "Please choose a theWord module file..."
 msgstr "Escolha um módulo do theWord..."
 
 #: formpropprojeto.schooseanothertext
-msgid "Change text"
+msgid "Replace text"
 msgstr "Trocar texto"
 
 #: formpropprojeto.schoosedictionary
@@ -146,6 +156,14 @@ msgstr "Limpar texto"
 #: formpropprojeto.scleartextconfirmation
 msgid "Are you sure you want to clear this text?"
 msgstr "Tem certeza de que deseja limpar este texto?"
+
+#: formpropprojeto.scleartextconfirmationassociation
+msgid ""
+"Are you sure you want to clear this text?\n"
+"All your associations will be lost!\n"
+msgstr ""
+"Tem certeza de que quer limpar este texto?\n"
+"Todas as suas associações serão perdidas!\n"
 
 #: formpropprojeto.sdestinationtab
 msgctxt "formpropprojeto.sdestinationtab"
@@ -268,8 +286,16 @@ msgid "Colossians"
 msgstr "Colossenses"
 
 #: projeto.scorrupteddata
-msgid "Corrupted data, some associations may be lost."
-msgstr "Dados inconsistentes, algumas associações podem ser perdidas."
+msgid ""
+"Corrupted data, some associations may be lost.This can happen for several reasons:\n"
+" 1. The project file was modified outside iBiblia\n"
+" 2. The project was created/edited on an incompatible iBiblia version\n"
+" 3. This can be a bug in iBiblia. In this case, please file a bug in Github project page.\n"
+msgstr ""
+"Dados inconsistentes, algumas associações podem ser perdidas. Isso pode ocorrer por várias razões:\n"
+"1. O projeto foi modificado fora do iBiblia\n"
+"2. O projeto foi criado/editado em uma versão incompatível do iBiblia\n"
+"3. Pode ser um bug no iBiblia. Nesse caso, abra um bug na página do projeto no Github.\n"
 
 #: projeto.sdaniel
 msgid "Daniel"
@@ -750,11 +776,11 @@ msgstr "Concordância de strong"
 
 #: tfrmmesclarprojetos.button1.caption
 msgid "Button1"
-msgstr ""
+msgstr "Button1"
 
 #: tfrmmesclarprojetos.caption
 msgid "Mesclar projetos"
-msgstr ""
+msgstr "Mesclar projetos"
 
 #: tfrmprincipal.actionabrirprojeto.caption
 msgid "Open..."
@@ -834,10 +860,12 @@ msgid "Rollback changes"
 msgstr "Reverter para alterações salvas"
 
 #: tfrmprincipal.actionsair.caption
+msgctxt "tfrmprincipal.actionsair.caption"
 msgid "Exit"
 msgstr "Sair"
 
 #: tfrmprincipal.actionsair.hint
+msgctxt "tfrmprincipal.actionsair.hint"
 msgid "Exit the program"
 msgstr "Sair do programa"
 
@@ -996,3 +1024,13 @@ msgstr "Salvar módulo como..."
 #: tfrmprincipal.toolbar1.caption
 msgid "ToolBar1"
 msgstr "ToolBar1"
+
+#: tfrmprincipal.toolbuttonexit.caption
+msgctxt "tfrmprincipal.toolbuttonexit.caption"
+msgid "Exit"
+msgstr "Sair"
+
+#: tfrmprincipal.toolbuttonexit.hint
+msgctxt "tfrmprincipal.toolbuttonexit.hint"
+msgid "Exit the program"
+msgstr "Sair do programa"
