Moving translation memory to inside definition popup (#7)
Now the dictionary popup always shows the translation memory as an
additional strongs tab.

--- a/languages/iBiblia.en.po
+++ b/languages/iBiblia.en.po
@@ -537,6 +537,10 @@ msgstr "Synthetic Concordance"
 msgid "Titus"
 msgstr "Titus"
 
+#: projeto.stranslationmemory
+msgid "Translation memory"
+msgstr "Translation memory"
+
 #: projeto.szechariah
 msgid "Zecariah"
 msgstr "Zecariah"
