Fixing file filter (#32)
Now the filter limits the modules to the ones providing the scope
selected for the project.

--- a/languages/iBiblia.po
+++ b/languages/iBiblia.po
@@ -33,8 +33,18 @@ msgstr ""
 msgid "New Testament"
 msgstr ""
 
+#: formnovoprojeto.snewtestamentfilter
+msgctxt "formnovoprojeto.snewtestamentfilter"
+msgid "theWord bible modules (*.ont, *.nt)|*.ont;*.nt"
+msgstr ""
+
 #: formnovoprojeto.soldtestament
 msgid "Old Testament"
+msgstr ""
+
+#: formnovoprojeto.soldtestamentfilter
+msgctxt "formnovoprojeto.soldtestamentfilter"
+msgid "theWord bible modules (*.ont, *.ot)|*.ont;*.ot"
 msgstr ""
 
 #: formprincipal.schanged
@@ -151,6 +161,16 @@ msgstr ""
 #: formpropprojeto.sdestinationtab
 msgctxt "formpropprojeto.sdestinationtab"
 msgid "Destination"
+msgstr ""
+
+#: formpropprojeto.snewtestamentfilter
+msgctxt "formpropprojeto.snewtestamentfilter"
+msgid "theWord bible modules (*.ont, *.nt)|*.ont;*.nt"
+msgstr ""
+
+#: formpropprojeto.soldtestamentfilter
+msgctxt "formpropprojeto.soldtestamentfilter"
+msgid "theWord bible modules (*.ont, *.ot)|*.ont;*.ot"
 msgstr ""
 
 #: formpropprojeto.sopendictionary
