--- a/languages/iBiblia.en.po
+++ b/languages/iBiblia.en.po
@@ -43,9 +43,19 @@ msgstr "New project"
 msgid "New Testament"
 msgstr "New Testament"
 
+#: formnovoprojeto.snewtestamentfilter
+msgctxt "formnovoprojeto.snewtestamentfilter"
+msgid "theWord bible modules (*.ont, *.nt)|*.ont;*.nt"
+msgstr "theWord bible modules (*.ont, *.nt)|*.ont;*.nt"
+
 #: formnovoprojeto.soldtestament
 msgid "Old Testament"
 msgstr "Old Testament"
+
+#: formnovoprojeto.soldtestamentfilter
+msgctxt "formnovoprojeto.soldtestamentfilter"
+msgid "theWord bible modules (*.ont, *.ot)|*.ont;*.ot"
+msgstr "theWord bible modules (*.ont, *.ot)|*.ont;*.ot"
 
 #: formprincipal.schanged
 msgid "changed"
@@ -171,6 +181,16 @@ msgstr ""
 msgctxt "formpropprojeto.sdestinationtab"
 msgid "Destination"
 msgstr "Destination"
+
+#: formpropprojeto.snewtestamentfilter
+msgctxt "formpropprojeto.snewtestamentfilter"
+msgid "theWord bible modules (*.ont, *.nt)|*.ont;*.nt"
+msgstr "theWord bible modules (*.ont, *.nt)|*.ont;*.nt"
+
+#: formpropprojeto.soldtestamentfilter
+msgctxt "formpropprojeto.soldtestamentfilter"
+msgid "theWord bible modules (*.ont, *.ot)|*.ont;*.ot"
+msgstr "theWord bible modules (*.ont, *.ot)|*.ont;*.ot"
 
 #: formpropprojeto.sopendictionary
 msgid "Please choose a theWord dictionary module..."
