--- a/languages/iBiblia.po
+++ b/languages/iBiblia.po
@@ -22,7 +22,7 @@ msgid "Please choose a name for your project"
 msgstr ""
 
 #: formnovoprojeto.schooseatleastonetext
-msgid "Please choose at least one source text"
+msgid "Please choose a source Bible text"
 msgstr ""
 
 #: formnovoprojeto.snewproject
@@ -35,7 +35,7 @@ msgstr ""
 
 #: formnovoprojeto.snewtestamentfilter
 msgctxt "formnovoprojeto.snewtestamentfilter"
-msgid "theWord bible modules (*.ont, *.nt)|*.ont;*.nt"
+msgid "theWord Bible modules (*.ont, *.nt)|*.ont;*.nt"
 msgstr ""
 
 #: formnovoprojeto.soldtestament
@@ -44,7 +44,7 @@ msgstr ""
 
 #: formnovoprojeto.soldtestamentfilter
 msgctxt "formnovoprojeto.soldtestamentfilter"
-msgid "theWord bible modules (*.ont, *.ot)|*.ont;*.ot"
+msgid "theWord Bible modules (*.ont, *.ot)|*.ont;*.ot"
 msgstr ""
 
 #: formprincipal.schanged
@@ -120,18 +120,18 @@ msgid "Not associated"
 msgstr ""
 
 #: formpropprojeto.schangetextconfirmation
-msgid "Are you sure you want to replace this text with a new one?"
+msgid "Are you sure you want to replace this Bible text with a new one?"
 msgstr ""
 
 #: formpropprojeto.schangetextconfirmationassociation
 msgid ""
-"Loading a new text will cause all your existing associations to be discarded. But, if you click 'Yes', iBiblia can try to keep existing associations for you.\n"
+"Loading a new Bible text will cause all your existing associations to be discarded. But, if you click 'Yes', iBiblia can try to keep existing associations for you.\n"
 "\n"
 "Would you like iBiblia to do that?\n"
 msgstr ""
 
 #: formpropprojeto.schooseabiblemodule
-msgid "Please choose a theWord module file..."
+msgid "Please choose a theWord Bible module file..."
 msgstr ""
 
 #: formpropprojeto.schooseanothertext
@@ -145,16 +145,16 @@ msgstr ""
 
 #: formpropprojeto.scleartext
 msgctxt "formpropprojeto.scleartext"
-msgid "Clear text"
+msgid "Clear Bible text"
 msgstr ""
 
 #: formpropprojeto.scleartextconfirmation
-msgid "Are you sure you want to clear this text?"
+msgid "Are you sure you want to clear this Bible text?"
 msgstr ""
 
 #: formpropprojeto.scleartextconfirmationassociation
 msgid ""
-"Are you sure you want to clear this text?\n"
+"Are you sure you want to clear this Bible text?\n"
 "All your associations will be lost!\n"
 msgstr ""
 
@@ -165,12 +165,12 @@ msgstr ""
 
 #: formpropprojeto.snewtestamentfilter
 msgctxt "formpropprojeto.snewtestamentfilter"
-msgid "theWord bible modules (*.ont, *.nt)|*.ont;*.nt"
+msgid "theWord Bible modules (*.ont, *.nt)|*.ont;*.nt"
 msgstr ""
 
 #: formpropprojeto.soldtestamentfilter
 msgctxt "formpropprojeto.soldtestamentfilter"
-msgid "theWord bible modules (*.ont, *.ot)|*.ont;*.ot"
+msgid "theWord Bible modules (*.ont, *.ot)|*.ont;*.ot"
 msgstr ""
 
 #: formpropprojeto.sopendictionary
@@ -293,7 +293,9 @@ msgid ""
 "Corrupted data, some associations may be lost.This can happen for several reasons:\n"
 " 1. The project file was modified outside iBiblia\n"
 " 2. The project was created/edited on an incompatible iBiblia version\n"
-" 3. This can be a bug in iBiblia. In this case, please file a bug in Github project page.\n"
+" 3. This can be a bug in iBiblia.\n"
+"    If this is the case, please file a bug in the Github project page\n"
+"    at https://github.com/rubiot/ibiblia.\n"
 msgstr ""
 
 #: projeto.sdaniel
@@ -330,7 +332,7 @@ msgstr ""
 
 #: projeto.sexporttofileerror
 msgid ""
-"iBiblia found and error while exporting the module file.\n"
+"iBiblia found an error while exporting the Bible module file.\n"
 "Please check if theWord is using the file, then close it and try again.\n"
 msgstr ""
 
